5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1723_2504.log
== TEST (2019-05-14 10:27:38) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while(2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
prit(t)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    prit(t)
NameError: name 'prit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:27:40) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while(2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
prit(t)
	

-- EXECUTION TIME:
0.189992
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 10, in <module>
    prit(t)
NameError: name 'prit' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:40) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
print(t)
	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:42) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
print(t)
	

-- EXECUTION TIME:
0.183539
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:32) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
print(t)
	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:41) 
-- CODE:
v = int(input("Virus: "))
l = int(input("leucocitos: "))
pv = int(input("proliferaçao dos virus"))
pl = int(input("proliferaçao dos leucocitos: "))
t = 0
while (2*v >= l):
	v = v*(1+(pv/100))
	l = l*(1+(pl/100))
	t = t + 1 
print(t)
	

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
